Closed
Bug 1447194
Opened 7 years ago
Closed 7 years ago
Use threadsafe refcounting in nsIURI implementations
Categories
(Core :: Networking, defect, P2)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla61
Tracking | Status | |
---|---|---|
firefox61 | --- | fixed |
People
(Reporter: valentin, Assigned: valentin)
References
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
59 bytes,
text/x-review-board-request
|
mayhemer
:
review+
jcristau
:
approval-mozilla-beta-
|
Details |
The last stage in making the now immutable implementations of nsIURI threadsafe is using threadsafe refcounting.
Comment hidden (mozreview-request) |
Comment 2•7 years ago
|
||
mozreview-review |
Comment on attachment 8960607 [details]
Bug 1447194 - Use threadsafe refcounting in all nsIURI implementations
https://reviewboard.mozilla.org/r/229368/#review235632
\ /
\O/
are these two the only ones we can change this way?
Attachment #8960607 -
Flags: review?(honzab.moz) → review+
Assignee | ||
Comment 3•7 years ago
|
||
(In reply to Honza Bambas (:mayhemer) from comment #2)
> Comment on attachment 8960607 [details]
> Bug 1447194 - Use threadsafe refcounting in all nsIURI implementations
>
> https://reviewboard.mozilla.org/r/229368/#review235632
>
> \ /
> \O/
>
> are these two the only ones we can change this way?
Yes. The other implementations that don't extend standard/simpleURI are marked threadsafe (even though they weren't).
I suspect the fact that these were not threadsafe kept us from accessing nsIURIs from multiple threads.
Pushed by valentin.gosu@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/770603f0efe1
Use threadsafe refcounting in all nsIURI implementations r=mayhemer
Comment 5•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Comment 6•7 years ago
|
||
Can we uplift this to Beta to help clean up the MOZ_CrashOOL oranges we still see there since that branch is destined for ESR status?
Flags: needinfo?(valentin.gosu)
Assignee | ||
Comment 7•7 years ago
|
||
I think we can. We would also have to uplift bug 1442239, bug 1442242, bug 1447190, bug 1447194 (this), bug 1447330 and bug 1453633. So far we haven't had any big issue on nightly. The only problem was bug 1450783 (slight performance regression).
Flags: needinfo?(valentin.gosu)
Assignee | ||
Comment 8•7 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #6)
> Can we uplift this to Beta to help clean up the MOZ_CrashOOL oranges we
> still see there since that branch is destined for ESR status?
Also, can you point out which MOZ_CrashOOL might be fixed by this? It would be nice to confirm if this would definitely fix them.
Flags: needinfo?(ryanvm)
Assignee | ||
Comment 9•7 years ago
|
||
Comment on attachment 8960607 [details]
Bug 1447194 - Use threadsafe refcounting in all nsIURI implementations
Approval Request Comment
[Feature/Bug causing the regression]:
Not a regression.
[User impact if declined]:
It would be harder to uplift patches to the new ESR branch.
Also, see comment 6.
[Is this code covered by automated tests?]:
Yes.
[Has the fix been verified in Nightly?]:
Yes.
[Needs manual test from QE? If yes, steps to reproduce]:
No.
[List of other uplifts needed for the feature/fix]:
bug 1442239, bug 1442242, bug 1447190, bug 1447194 (this), bug 1447330 and bug 1453633 - in this order.
[Is the change risky?]:
Low risk.
[Why is the change risky/not risky?]:
This patches have not surfaced any big issues on Nightly.
The only thing that would count as a regression is bug 1450783 - a slight slowdown caused by the atomic refcounting.
[String changes made/needed]:
None.
Attachment #8960607 -
Flags: approval-mozilla-beta?
Comment 10•7 years ago
|
||
(In reply to Valentin Gosu [:valentin] from comment #8)
> Also, can you point out which MOZ_CrashOOL might be fixed by this? It would
> be nice to confirm if this would definitely fix them.
Bug 1445170 and its giant pile o' dupes claim to have been fixed by this. That said, I had no idea there were this many dependencies when I made that comment last night. This looks like a lot to uplift so late in the cycle :(
Flags: needinfo?(ryanvm)
Comment 11•7 years ago
|
||
Comment on attachment 8960607 [details]
Bug 1447194 - Use threadsafe refcounting in all nsIURI implementations
I don't think we should take this set of changes that late in beta.
Attachment #8960607 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
You need to log in
before you can comment on or make changes to this bug.
Description
•