Bug 1447194 - Use threadsafe refcounting in all nsIURI implementations r=mayhemer

It seem that only nsStandardURL and nsSimpleURI (and classes that inherit them) do not have threadsafe refcounting yet.

MozReview-Commit-ID: J8gLoBSPCTl